--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,25 @@ html, body {
     font-size: 50px;
 }
 
-#mute-btn, #switch-btn, #fs-btn {
+#mute-btn, #switch-btn, #fs-btn, #playback, #playback h3, #playback p, #playback div {
     display: inline-block;
+}
+
+#playback >* {
+    margin: 10px;
+}
+
+#playback {
+    font-size: 20px;
+    font-weight: 900;
+    color: green;
+    background-color: honeydew;
+}
+
+#playback p {
+    font-size: 30px;
+    color: green;
+    width: 50px;
 }
 
 .vid-btn {
@@ -39,10 +56,17 @@ html, body {
     margin: 0 20px;
 }
 
-.vid-btn:hover, #alt-button:hover {
+.vid-btn:hover, #alt-button:hover, #pb-btn:hover {
     box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     cursor: grab;
     transform: scale(1.2);
+}
+
+#pb-btn {
+    padding: 10px 15px;
+    border-radius: 15px;
+    background-color: green;
+    color: white;
 }
 
 #alt-button {
@@ -91,6 +115,19 @@ html, body {
     height: 50px;
     background-color: darkgreen;
     /* display: inline-block; */
+}
+
+#vol-bar2 {
+    width: 250px;
+    height: 100px;
+    background-color: lightgreen;
+}
+
+#white-bar { 
+    width: 20px;
+    background-color: darkgreen;
+    display: inline-block;
+    margin: 0px;
 }
 
 
