--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ html, body {
     background-color: lightgreen;
 }
 
-#white-bar { 
+.white-bar { 
     width: 20px;
     background-color: darkgreen;
     display: inline-block;
